# explosive-sync-flash-crash

./: .coverage  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/src/: flash_crash.cpp  kuramoto.cpp  kuramoto_integrator.hpp  main.cpp  network_gen.cpp  order_param.cpp
data/: early_warning.csv  finite_size.csv  flash_crash.csv  flash_crash_cpp.csv  kuramoto_order.csv  stuart_landau_order.csv
python/analysis/: early_warning.py  finite_size_scaling.py  flash_crash_sim.py  hysteresis_sweep.py  lyapunov_analysis.py  run_kuramoto.py  run_stuart_landau.py
python/plots/: plot_degree_distribution.py  plot_early_warning.py  plot_finite_size.py  plot_percolation.py  plot_phase_diagram.py
python/tests/: test_analysis.py  test_helpers.py  test_scripts.py
python/utils/: helpers.py
