[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explosive-sync"
version = "0.1.0"
description = "Explosive Synchronization and Flash Crash in Networked Oscillators"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.ruff]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["python"]
